test_suite/alan-2022-examples/failing/006330_mutation.alan
source b begin leave 93 else or 8067 end
